# auth-service

./: .dockerignore  .env.example  .gitignore  BRIEF.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/commands/: self-review.md
.claude/hooks/: pre-flight-check.py  self-review-reminder.py
.claude/ideation/: IDEATION_PROCESS.md
.github/workflows/: ci.yml  claude-code-review.yml
app/: config.py  dependencies.py  main.py
app/api/: admin.py  auth.py  health.py  keys.py
app/db/: api_keys.py  audit.py  pool.py  tokens.py  users.py
app/db/migrations/: 001_initial.sql
app/middleware/: csrf.py  rate_limit.py  security.py
app/models/: api_key.py  auth.py  user.py
app/pages/: auth.py
app/services/: api_key.py  audit.py  auth.py  breach_check.py  email.py  password.py  rate_limit.py  token.py
docs/: SECURITY_AUDIT.md  SPEC.md
examples/fastapi-app/: README.md  main.py  requirements.txt
sdk/: README.md  pyproject.toml
sdk/auth_client/: __init__.py  _async.py  _base.py  _sync.py  exceptions.py  models.py
sdk/tests/: test_async_client.py  test_sync_client.py
static/css/: auth.css
static/js/: auth.js
templates/: base.html  forgot_password.html  login.html  register.html  reset_password.html  verify_email.html
tests/: conftest.py
tests/integration/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_health.py  test_api_keys.py  test_middleware.py
tests/load/: helpers.py  listeners.py  locustfile.py  setup_users.py
tests/load/users/: __init__.py  admin.py  authenticated.py  registration.py
tests/unit/: conftest.py  test_middleware_rate_limit.py  test_password_breach.py  test_resolve_client_ip.py  test_services_api_key.py  test_services_auth.py  test_services_password.py  test_services_rate_limit.py  test_services_token.py  test_startup.py
