[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no DB required)",
    "integration: Integration tests (requires MySQL)",
    "load: Load tests (requires running server)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
